[package]
name = "crypto-challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
rand = "0.8.5"
openssl = { version = "0.10", features = ["vendored"] }

[lib]
name = "util"
path = "src/lib.rs"
edition = "2021"
crate-type = ["lib"]
